--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
-
-<html>
-  <body>
-    hello world
-  </body>
+ <html>
+<head>
+<link href='https://fonts.googleapis.com/css?family=Autour One' rel='stylesheet'>
+<style>
+body{font-family: 'Autour One';font-size: 22px; background-image:url( 'images/f.png');}
+</style>
+</head>
+<body>
+<div align="center"><h2><p>fortnite codes </h2></p></div>
+<p>hi my name is aarush this is my website it about fortnite worm up codes.</p>
+<marquee scrollamount="10" direction="down">greatest fortnite players</marquee>
+<img src="C:/Users/HP/Desktop/website/images/tefue.jpg" height="400px" width="405px">
+<br><a href="fortnite players.html"><h4><font color="red"> hi click here to go to best fortnite players</font></h4> </a></br>
+</body>
 </html>
-      
