--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </style>
 </head>
 <body>
-<img src="https://aarush123456789.github.io/fortnite/grass.png">
+<img src="https://aarush123456789.github.io/fortnite/images/grass.png">
 <div align="center"><img src=""/><h2><p>fortnite codes </h2></p></div>
 <p>hi my name is aarush this is my website it about fortnite up codes.</p>
 <marquee scrollamount="10" direction="down">greatest fortnite players</marquee>
