--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </style>
 </head>
 <body>
-<img src="https://aarush123456789.github.io/fortnite/images/grass.jpg">
-<div align="center"><img src=""/><h2><p>fortnite codes </h2></p></div>
+
+<div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
 <p>hi my name is aarush this is my website it about fortnite up codes.</p>
 <marquee scrollamount="10" direction="down">greatest fortnite players</marquee>
 <img src="https://aarush123456789.github.io/fortnite/images/tefue.jpg" height="400px" width="405px">
