--- a/index.html
+++ b/index.html
@@ -2,15 +2,23 @@
 <head>
 <link href='https://fonts.googleapis.com/css?family=Autour One' rel='stylesheet'>
 <style>
+  .content{
+    max-width:500px;
+    
+  }
 body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://aarush123456789.github.io/fortnite/images/f.png");}
 </style>
 </head>
-<body align="center">
+<body>
+  
+  <div class="content">
 
 <div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
-<p>Hi my name is Aarush this is my website it about fortnite up codes.</p>
+<hr>
+  <p>Hi my name is Aarush this is my website it about fortnite up codes.</p>
 <marquee scrollamount="10" direction="left">greatest fortnite players</marquee>
 <a href="fortnite players.html"><img src="https://aarush123456789.github.io/fortnite/images/tefue.jpg" height="400px" width="405px">
 <br><h4><font color="red"> hi click here to go to best fortnite players</font></h4> </a></br>
+  </div>
 </body>
 </html>
