--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <style>
   .content{
     max-width:800px;
+    margin: auto;
     
   }
 body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://aarush123456789.github.io/fortnite/images/f.png");}
