--- a/player.html
+++ b/player.html
@@ -1,4 +1,15 @@
 <html>
+  <head>
+    <link href='https://fonts.googleapis.com/css?family=Autour One' rel='stylesheet'>
+<style>
+  .content{
+    max-width:800px;
+    margin: auto;
+    
+  }
+body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://aarush123456789.github.io/fortnite/images/f.png");}
+</style>
+  </head>
 <body>
 <table>
 <tr>
