--- a/player.html
+++ b/player.html
@@ -11,6 +11,9 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </style>
   </head>
 <body>
+  <div class="content">
+<div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
+<hr>
 <table>
 <tr>
 <th>Name
