--- a/player.html
+++ b/player.html
@@ -16,7 +16,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <hr>
 <table>
 <tr>
-<th><img src="https://aarush123456789.github.io/player/images/tefue22.png
+<th><img src="https://aarush123456789.github.io/player/images/tefue22.jpg">
 </th>
 <th>Name
 </th> 
