--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <hr>
   <p>Hi my name is Aarush this is my website it about fortnite up codes.</p>
 <marquee scrollamount="10" direction="left">greatest fortnite players</marquee>
-<a href="fortnite players.html"><img src="https://aarush123456789.github.io/fortnite/images/tefue.jpg" height="400px" width="405px">
+<a href="players.html"><img src="https://aarush123456789.github.io/fortnite/images/tefue.jpg" height="400px" width="405px">
 <br><h4><font color="red"> hi click here to go to best fortnite players</font></h4> </a></br>
   </div>
 </body>
