--- a/player.html
+++ b/player.html
@@ -19,7 +19,11 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <th><img src="https://aarush123456789.github.io/fortnite/images/tefue22.jpg">
 </th>
 <th>tefue
-</th> 
+</th>
+<th><img src="https://aarush123456789.github.io/fortnite/images/ninja.jpg">
+</th>
+<th>
+</th>
 </tr> 
 <tr>
 <td>
