--- a/player.html
+++ b/player.html
@@ -20,7 +20,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </th>
 <th>tefue
 </th>
-<th><img src="https://aarush123456789.github.io/fortnite/images/ninja.jpg">
+<th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp">
 </th>
 <th>
 </th>
