--- a/player.html
+++ b/player.html
@@ -22,7 +22,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </th>
 <th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp">
 </th>
-<th>
+<th>ninja
 </th>
 </tr> 
 <tr>
