--- a/player.html
+++ b/player.html
@@ -20,7 +20,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </th>
 <th>tefue
 </th>
-<th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183"><br>
+<th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183">
 </th>
 <th>ninja
 </th>
