--- a/player.html
+++ b/player.html
@@ -25,6 +25,9 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183">
 </th>
 <th>ninja
+<th><img src="https://aarush123456789.github.io/fortnite/images/
+</th>
+<th>
 </th>
 </tr> 
 <tr>
