--- a/player.html
+++ b/player.html
@@ -15,18 +15,20 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
 <hr>
 <table>
-<tr>
-<th><img src="https://aarush123456789.github.io/fortnite/images/tefue22.jpg">
-</th>
-<th>tefue
-</th>
-</tr>
-<tr>
-<th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183">
-</th>
-<th>ninja
-<th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
-</th>
+  <tr>
+    <th><img src="https://aarush123456789.github.io/fortnite/images/tefue22.jpg">
+    </th>
+      <th>tefue
+      </th>
+  </tr>
+  <! kglbhlkgblkrbg>
+  <tr>
+    <th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183">
+    </th>
+      <th>ninja
+      <tr>
+    <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
+    </th>
 <th>myth
 </th>
 </tr> 
