--- a/player.html
+++ b/player.html
@@ -15,23 +15,28 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
 <hr>
 <table>
+  <! --------------Row 1---------------->
   <tr>
     <th><img src="https://aarush123456789.github.io/fortnite/images/tefue22.jpg">
     </th>
       <th>tefue
       </th>
   </tr>
-  <! kglbhlkgblkrbg>
+ <! --------------Row 2---------------->
   <tr>
     <th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183">
     </th>
       <th>ninja
-      <tr>
+  </tr>
+  <! --------------Row 3---------------->
+  <tr>
     <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
     </th>
-<th>myth
-</th>
-</tr> 
+    <th>myth
+    </th>
+
+  
+
 <tr>
 <td>
 </td>
@@ -41,3 +46,4 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 </table>
 </body>
 </html>
+
