--- a/player.html
+++ b/player.html
@@ -34,6 +34,17 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
     </th>
     <th>myth
     </th>
+<tr>
+    <th><img src="https://aarush123456789.github.io/fortnite/images/ninja.webp" alt="ninja" height="200" width="183">
+    </th>
+      <th>ninja
+  </tr>
+  <! --------------Row 4---------------->
+  <tr>
+    <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
+    </th>
+    <th>myth
+    </th>
 
   
 
