--- a/player.html
+++ b/player.html
@@ -35,8 +35,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
     <th>myth
     </th>
   </tr>
-  
-  <! --------------Row 4---------------->
+  <! -----------------row 4-------------->
   <tr>
     <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
     </th>
@@ -44,32 +43,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
     </th>
   </tr>
   
-  <! --------------Row 4---------------->
-  <tr>
-    <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
-    </th>
-    <th>myth
-    </th>
-  </tr>
   
-  <! --------------Row 4---------------->
-  <tr>
-    <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
-    </th>
-    <th>myth
-    </th>
-  </tr>
-  
-  <! --------------Row 4---------------->
-  <tr>
-    <th><img src="https://aarush123456789.github.io/fortnite/images/myth.png">
-    </th>
-    <th>myth
-    </th>
-  </tr>
-
-  
-
 <tr>
 <td>
 </td>
