--- a/player.html
+++ b/player.html
@@ -37,7 +37,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
   </tr>
   <! -----------------row 4-------------->
   <tr>
-    <th><img src="https://aarush123456789.github.io/fortnite/images/">
+    <th><img src="https://aarush123456789.github.io/fortnite/images/faze.jpg">
     </th>
     <th>myth
     </th>
