--- a/codes.html
+++ b/codes.html
@@ -1,6 +1,14 @@
 <html>
 <body>
 <head>
+ <style>
+  .content{
+    max-width:800px;
+    margin: auto;
+    
+  }
+body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://aarush123456789.github.io/fortnite/images/f.png");}
+</style>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/u_YvFK7CGGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <head>
 </body>
