--- a/codes.html
+++ b/codes.html
@@ -15,6 +15,6 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
  <p><h4> corse 1 </h4></p>
  <p> Creator(s): Noizeeh & Martoz </p>
  <p> Code: 3939-9108-1428</P>
-
+<p> Type: Advanced Warm-up Course </p>
 </body>
 </html>
