--- a/codes.html
+++ b/codes.html
@@ -10,19 +10,27 @@
 body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://aarush123456789.github.io/fortnite/images/f.png");}
  </style>
 </head>
+<!-----------------Course 1--------------->
  <iframe width="560" height="315" src="https://www.youtube.com/embed/u_YvFK7CGGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
- <p><h4> corse 1 </h4></p>
+ <p><h4> Course 1 </h4></p>
  <p> Creator(s): Noizeeh & Martoz </p>
  <p> Code: 3939-9108-1428</P>
 <p> Type: Advanced Warm-up Course </p>
-<p> corse 2</p>
+
+<!-----------------Course 2--------------->
+
+<p> Course 2</p>
 <p> Creator(s): OfficialCanDook </p>
 <p> Code: 5618-2963-5299 </p>
 <p> Type: Advanced Warm-up Course</p>
+
+<!-----------------Course 3--------------->
 <iframe width="560" height="315" src="https://www.youtube.com/embed/OAUu5ha_VNc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<p> course 3 </p>
+<p> Course 3 </p>
 <p> Creator(s):  /u/Blizzkill2 (Selage)</p>
 <p> Code: 1593-8407-2408 </p>
 <p> Type: Aim and Edit Practice</p>
+
+
 </body>
 </html>
