--- a/player.html
+++ b/player.html
@@ -12,7 +12,8 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
   </head>
 <body>
   <div class="content">
-<div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
+<div align="center"><a href="https://aarush123456789.github.io/fortnite"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" 
+                                              height="85px"><h2>fortnite codes </h2></a></div>
 <hr>
 <table>
   <! --------------Row 1---------------->
