--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
   
   <div class="content">
 
-<div align="center"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" height="85px"><h2>fortnite codes </h2></div>
+<div align="center"><a href="https://aarush123456789.github.io/fortnite"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" 
+                                              height="85px"><h2>fortnite codes </h2></a></div>
 <hr>
   <p>Hi my name is Aarush this is my website it about fortnite up codes.</p>
 <marquee scrollamount="10" direction="left">greatest fortnite players</marquee>
