--- a/codes.html
+++ b/codes.html
@@ -1,5 +1,5 @@
 <html>
-<body>
+
 <head>
  <style>
   .content{
@@ -10,6 +10,10 @@
 body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://aarush123456789.github.io/fortnite/images/f.png");}
  </style>
 </head>
+ <body>
+  <div class="content">
+  <div align="center"><a href="https://aarush123456789.github.io/fortnite"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" 
+                                              height="85px"><h2>fortnite codes </h2></a></div>
 <!-----------------Course 1--------------->
  <iframe width="560" height="315" src="https://www.youtube.com/embed/u_YvFK7CGGM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
  <p><h4> Course 1 </h4></p>
@@ -30,7 +34,7 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <p> Creator(s):  /u/Blizzkill2 (Selage)</p>
 <p> Code: 1593-8407-2408 </p>
 <p> Type: Aim and Edit Practice</p>
-
+ </div>
 
 </body>
 </html>
