--- a/player.html
+++ b/player.html
@@ -43,15 +43,10 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
     <th>fazesawy 
     </th>
   </tr>
-  
-  
-<tr>
-<td>
-</td>
-<td>
-</td>
-</tr>
+
 </table>
+</br>
+    <a href="https://aarush123456789.github.io/fortnite/codes.html"><h3> Click here to checkout Fortnite codes</h3></a>
 </body>
 </html>
 
