--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@ body{font-family: 'Autour One';font-size: 22px; background-image:url( "https://a
 <div align="center"><a href="https://aarush123456789.github.io/fortnite"><img src="https://aarush123456789.github.io/fortnite/images/grass.jpg" width="150px" 
                                               height="85px"><h2>fortnite codes </h2></a></div>
 <hr>
-  <p>Hi my name is Aarush this is my website it about fortnite up codes.</p>
+  <p>Hi my name is Aarush this is my website it about fortnite up codes.click on the logo to go back to 
+  home</p>
 <marquee scrollamount="10" direction="left">greatest fortnite players</marquee>
 <a href="player.html"><img src="https://aarush123456789.github.io/fortnite/images/tefue.jpg" height="400px" width="405px">
 <br><h4><font color="red"> hi click here to go to best fortnite players</font></h4> </a></br>
